--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
-    <link href="https://fonts.googleapis.com/css?family=Charm:400,700&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Charm|Open+Sans:400,600&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Karaoke Companion</title>
   </head>
