--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="apple-touch-icon" href="icon192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
-     <link href="https://fonts.googleapis.com/css?family=Charm|Open+Sans:400,600&display=swap" rel="stylesheet"> 
+     <link href="https://fonts.googleapis.com/css?family=Courgette|Open+Sans:400,600&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Karaoke Companion</title>
   </head>
